package com.csl.chain;

/**
 * @author MaoLongLong
 */
public enum Level {

    /**
     * 日志级别, 从低到高
     */
    TRACE, DEBUG, INFO, WARN, ERROR
}
